data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1549.wast
;; 10. **Test Description**: A scenario where a loop consists of a conditional `if` block with a nested `br_if` targeting various levels of the enclosing loops. Ensure correct unwinding consistency between `if` and loop blocks.    - **Constraint Checked**: Interaction of `if` blocks and loop-control instructions.    - **Relation to Infinite Loops**: Incorrect interaction between `if` conditions and loop exits could cause the loop to function infinitely without breaking as intended.

(assert_invalid
  (module (func $loop-if-br_if
    (loop $outer
      (if (result i32)
        (i32.eqz (i32.const 1))
        (then (br_if 1 (i32.const 1)))
        (else (br 0))
      )
    )
  ))
  "type mismatch"
)